!fix: remove `@dls-slider-label-spacing` as it should be consistent with Tooltip's arrow spacing

--- a/test/specs/slider/slider.less
+++ b/test/specs/slider/slider.less
@@ -14,7 +14,6 @@ div {
   -dls-slider-mark-size-m: @dls-slider-mark-size-m;
   -dls-slider-font-size-s: @dls-slider-font-size-s;
   -dls-slider-font-size-m: @dls-slider-font-size-m;
-  -dls-slider-label-spacing: @dls-slider-label-spacing;
   -dls-slider-font-color: @dls-slider-font-color;
   -dls-slider-font-color-disabled: @dls-slider-font-color-disabled;
   -dls-slider-thumb-background-color: @dls-slider-thumb-background-color;
