--- a/tokens/components/slider.less
+++ b/tokens/components/slider.less
@@ -40,8 +40,6 @@
 @dls-slider-font-size-s: @dls-font-size-s;
 @dls-slider-font-size-m: @dls-font-size-m;
 
-@dls-slider-label-spacing: @dls-padding-unit * 1;
-
 /* Colors */
 @dls-slider-font-color: @dls-font-color-aux;
 @dls-slider-font-color-disabled: @dls-font-color-disabled;
